--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'index' %}active{% endif %}" href="/">首页</a>
+                        <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="/dashboard">首页</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'route_planner' %}active{% endif %}" href="/route">训练计划</a>
@@ -119,7 +119,7 @@
     <!-- Footer -->
     <footer class="bg-light py-4 mt-5">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2024 Strava Sports Data. All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 OpenRunTraining. All rights reserved.</p>
         </div>
     </footer>
 
